--- a/src/assets/scss/pages/_case.scss
+++ b/src/assets/scss/pages/_case.scss
@@ -1,15 +1,23 @@
 .case {
-	.clipbg_wrap{
-		&:nth-child(odd){
+	.clipbg_wrap {
+		&:nth-child(odd) {
 			background-color: #fff;
 		}
-		&:nth-child(even){
+		&:nth-child(even) {
 			background: linear-gradient(
-			90deg,
-			rgba(37, 121, 191, 1) 0%,
-			rgba(37, 147, 213, 1) 50%
-		);
+				90deg,
+				rgba(37, 121, 191, 1) 0%,
+				rgba(37, 147, 213, 1) 50%
+			);
 		}
+	}
+	.clip-top {
+		-webkit-clip-path: polygon(100% 0%, 0 0, 0% 100%);
+		clip-path: polygon(100% 0%, 0 0, 0% 100%);
+		padding: 100px 0 0 0;
+		background-color: #fff;
+		text-align: center;
+		margin-bottom: 90px;
 	}
 	.section_1 {
 		background: linear-gradient(
@@ -17,8 +25,24 @@
 			rgba(37, 121, 191, 1) 0%,
 			rgba(37, 147, 213, 1) 50%
 		);
-		padding: 190px 0 0 0;
-		text-align: center;
+		// padding: 190px 0 0 0;
+		// text-align: center;
+
+		// @include is-sp {
+		// 	padding: 100px 0 0 0;
+		// }
+
+		.clip-bottom {
+			-webkit-clip-path: polygon(100% 0%, 100% 100%, 0% 100%);
+			clip-path: polygon(100% 0%, 100% 101%, 0% 100%);
+			padding: 100px 0 0 0;
+			background-color: #fff;
+			text-align: center;
+
+			@include is-sp {
+				padding: 100px 0 0 0;
+			}
+		}
 
 		.l-wrap {
 			position: relative;
