--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -51,7 +51,6 @@
 			}
 		}
 
-
 		&:nth-of-type(4) {
 			padding-top: 0;
 		}
@@ -65,6 +64,8 @@
 
 			@include is-sp {
 				padding: 200px 0 100px 0;
+				-webkit-clip-path: polygon(0 7%, 100% 0%, 100% 93%, 0% 100%);
+				clip-path: polygon(0 7%, 100% 0%, 100% 93%, 0% 100%);
 			}
 
 			.bg_2 {
