changed: modify case-study08 pages (3)

--- a/src/assets/scss/pages/_case.scss
+++ b/src/assets/scss/pages/_case.scss
@@ -26,7 +26,7 @@
 			rgba(37, 147, 213, 1) 50%
 		);
 		// padding: 190px 0 0 0;
-		// text-align: center;
+		text-align: center;
 
 		// @include is-sp {
 		// 	padding: 100px 0 0 0;
