--- a/src/assets/scss/pages/_casestudy08.scss
+++ b/src/assets/scss/pages/_casestudy08.scss
@@ -1,15 +1,17 @@
 .case08 {
 	&--s1 {
-		padding-top: 70px !important;
+	
+		&_title {
+			letter-spacing: 0.18em !important;
+		}
 
 		@include is-sp {
-
 			&_ttl {
-				font-size: .75rem !important;
+				font-size: 0.75rem !important;
 			}
 
 			&_title {
-				letter-spacing: 0.2em;
+				letter-spacing: 0.18em !important;
 				@include font-line(25);
 			}
 
@@ -21,23 +23,26 @@
 				display: none !important;
 			}
 
-			.pt65 {
-				padding-top: 65px;
+			.l15 {
+				left: 15px;
 			}
-			
-			.pt160 {
-				padding-top: 160px;
-			}
-			
 		}
+	}
 
+	&--s2 {
+		padding-top: 0 !important;
 	}
 
 	&--bg-01 {
-		position: absolute;
-		left: 0;
-		width: 290px;
-		bottom: -65px;
-		z-index: -1;
+		position: absolute !important;
+		left: 0 !important;
+		width: 290px !important;
+		bottom: -65px !important;
+		z-index: -1 !important;
+	}
+
+	&--s1_c4 {
+		-webkit-clip-path: polygon(0 15%, 100% 0%, 105% 100%, 0% 102%) !important;
+		clip-path: polygon(0 15%, 100% 0%, 105% 100%, 0% 102%) !important;
 	}
 }
