--- a/src/assets/scss/pages/_casestudy08.scss
+++ b/src/assets/scss/pages/_casestudy08.scss
@@ -1,6 +1,6 @@
 .case08 {
 	&--s1 {
-	
+
 		&_title {
 			letter-spacing: 0.18em !important;
 		}
@@ -33,6 +33,8 @@
 		padding-top: 0 !important;
 	}
 
+	// globals
+
 	&--bg-01 {
 		position: absolute !important;
 		left: 0 !important;
@@ -45,4 +47,9 @@
 		-webkit-clip-path: polygon(0 15%, 100% 0%, 105% 100%, 0% 102%) !important;
 		clip-path: polygon(0 15%, 100% 0%, 105% 100%, 0% 102%) !important;
 	}
+
+	// // padding 
+	// &--pt-sp {
+	// 	padding-top: 0 !important; 
+	// }
 }
