--- a/src/assets/scss/object/component/_clipPath.scss
+++ b/src/assets/scss/object/component/_clipPath.scss
@@ -26,3 +26,13 @@
 // .white_bg {
 // 	background: #fff !important;
 // }
+
+.clip {
+    -webkit-clip-path: polygon(0 87%, 100% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(0 87%, 100% 0%, 100% 100%, 0% 100%);
+    background-color: #2579BF;
+    height: 95px;
+    width: 1200px;
+    position: absolute;
+    bottom: 0;
+}
